# Multi_agent_Chatbot

./: README.md
multi_agent_chatbot/: README.md  pyproject.toml
multi_agent_chatbot/db/: chroma.sqlite3
multi_agent_chatbot/knowledge/: user_preference.txt
multi_agent_chatbot/src/multi_agent_chatbot/: crew.py  main.py
multi_agent_chatbot/src/multi_agent_chatbot/config/: agents.yaml  tasks.yaml
