[project]
name = "multi_agent_chatbot"
version = "0.1.0"
description = "multi_agent_chatbot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
multi_agent_chatbot = "multi_agent_chatbot.main:run"
run_crew = "multi_agent_chatbot.main:run"
train = "multi_agent_chatbot.main:train"
replay = "multi_agent_chatbot.main:replay"
test = "multi_agent_chatbot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
